Added revert class

--- a/ridetherailstrackpoints.react/styles/globals.css
+++ b/ridetherailstrackpoints.react/styles/globals.css
@@ -162,3 +162,10 @@ button.color-component{
 .bg-opacity-color {
   opacity: 0.25;
 }
+
+.revert {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
+
